fixed nav positioning on page from overlapping elements

--- a/frontend/src/components/navbar/Navbar.module.css
+++ b/frontend/src/components/navbar/Navbar.module.css
@@ -11,7 +11,6 @@ body {
     height: 100vh;
     overflow: auto;
     margin: 0;
-    padding: 0;
 }
 
 .logoContainer {
@@ -25,8 +24,12 @@ body {
     flex-direction: row;
     justify-content: space-between;
     height: 60px;
+    width: 100%;
     align-items: center;
     border-bottom: 1px solid grey;
+    position: fixed;
+    top: 0; /* Aligning nav to very top */ 
+    left: 0; /* Aligning nav to far left */
 }
 
 .navLinks {
