--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -66,3 +66,12 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
+
+
+body {
+  margin: 0;
+  display: flex;
+  min-width: 320px;
+  min-height: 100vh;
+  padding-top: 60px; /* Padding for the navigation */
+}
